Updated homepage images, fixed navbar collapse glitch, added fade transittion to slider

--- a/static/css/style-homepage-slider.css
+++ b/static/css/style-homepage-slider.css
@@ -18,7 +18,7 @@
 .carousel-item{
     /* border:2px solid aqua; */
     /* overflow: hidden; */
-    min-width:110vw !important;
+    min-width:100vw !important;
 
 }
 
@@ -106,6 +106,7 @@
     padding-left:20px;
     padding-right:20px;
     margin-bottom:2%;
+    background-color: rgba(95, 95, 95, 0.459) !important;
     
    
 }
@@ -127,6 +128,7 @@
     padding-right:80px;
     margin-bottom:2%;
     min-width:300px !important;
+    background-color: rgba(95, 95, 95, 0.459) !important;
     
    
 }
@@ -239,3 +241,8 @@
      background-color:blue;
      height:600px;
  }
+
+
+
+
+
