--- a/static/css/style-navbar.css
+++ b/static/css/style-navbar.css
@@ -113,7 +113,7 @@
 
 .navbar-collapse {
     margin-top:10px;
-    margin-left:29%;
+    margin-left:32%;
 }
 
 .navbar-nav {
